@@ -142,6 +142,7 @@ Major new features in this release
 
 All:
 
+- Allow loading message catalogs from wxFileSystem (Axel Gembe)
 - Added support for user-defined types to wxConfig (Marcin Wojdyr).
 - Added wxJoin() and wxSplit() functions (Francesco Montorsi).
 - Added wxMutex::LockTimeout() (Aleksandr Napylov).
